# copier-python-cli

./: copier.yml
project/: .pre-commit-config.yaml.tmpl  justfile  justfile.tmpl  pyproject.toml
project/.github/workflows/: shiv-artifacts.yml
project/src/[[project_name]]/: console.py.tmpl
project/tests/integration/: test_console.py  test_console.py.tmpl
